--- a/src/utils/Languages/ar.json
+++ b/src/utils/Languages/ar.json
@@ -22,8 +22,89 @@
             "todaysPendingOrder":"أمر معلق اليوم",
             "totalPendingOrder":"إجمالي الطلبات المعلقة",
             "completedOrder":"الطلبات المكتملة",
-            "assignedOrder":"الأوامر المعينة"
-            
+            "assignedOrder":"الأوامر المعينة",
+            "pendingOrder":"الأوامر المعلقة",
+            "myRevenue":"ايراداتي",
+            "logout":"تسجيل خروج",
+            "version":"إصدار",
+            "logoutMessage":"هل أنت متأكد أنك تريد تسجيل الخروج",
+            "yes":"نعم",
+            "no":"لا"
+
+        },
+        "Profile":{
+            "myProfile":"ملفي",
+            "message":"إجمالي الطلبات المكتملة حتى تاريخه",
+            "name":"اسم",
+            "email":"بريد إلكتروني",
+            "phoneNumber":"رقم التليفون",
+            "address":"عنوان",
+            "city":"مدينة",
+            "area":"منطقة",
+            "shihab":"شهاب 5",
+            "trolleyMail":"s6@trolley-sd.com",
+            "omdurman":"أم درمان",
+            "aldohaAlArda":"الدوحة ، العارضة"
+        },
+        "FilterModal":{
+            "filter":"منقي",
+            "paid":"مدفوع",
+            "pending":"قيد الانتظار",
+            "all":"الجميع",
+            "normal":"طبيعي",
+            "vip":"كبار الشخصيات",
+            "deliveryDate":"تاريخ التسليم او الوصول",
+            "selectTimeSlot":"حدد فترة زمنية",
+            "selectItem":"حدد البند",
+            "apply":"يتقدم",
+            "paymentStatus":"حالة السداد :",
+            "cutomerType":"نوع العميل  :",
+            "totalOrder":"إجمالي الطلبات"
+        },
+        "DummyData":{
+            "SDG 2330":"2330.12 جنيه سوداني",
+            "SDG 149":"الهدف 149",
+            "01:00 PM - 03:00 PM":"01:00 م - 03:00 م",
+            "Raheeg":"الرهيج",
+            "Bhari":"بهاري",
+            "Kafouri":"كافوري",
+            "PayInCard":"الدفعبالبطاقة",
+            "Paid":"مدفوع",
+            "Store A":"المتجر أ",
+            "Sudan, Khartoum":"السودان ، الخرطوم",
+            "Pending":"قيد الانتظار",
+            "orderNo":"رقم الطلب",
+            "total":"المجموع",
+            "orderDate&Time":"تاريخ الطلب والوقت",
+            "delivery":"توصيل",
+            "paymentMode":"طريقة الدفع",
+            "paymentStatus":"حالة السداد",
+            "deliveryDate":"تاريخ التسليم او الوصول",
+            "deliveryTimeSlot":"موعد التسليم",
+            "customerInformation":"معلومات العميل",
+            "customerName":"اسم الزبون",
+            "mobileNumber":"رقم الهاتف المحمول",
+            "address":"عنوان",
+            "city":"مدينة",
+            "area":"منطقة",
+            "location":"موقع",
+            "payment":"قسط",
+            "storeInformation":"معلومات المتجر",
+            "storeName":"اسم المتجر",
+            "storeNumber":"عدد مخزن",
+            "orderDetails":"تفاصيل الطلبات",
+            "invoice":"فاتورة",
+            "verify":"يؤكد",
+            "deliveryCharge":"رسوم التوصيل"
+
+        },
+        "MyRevenue":{
+            "myRevenue":"ايراداتي",
+            "revenue" :"ربح",
+           "todaysRevenue":"إيرادات اليوم",
+           "totalRevenue":"إجمالي الإيرادات",
+           "sdg":"الهدف",
+           "filter":"منقي"
         }
     }
 }
