maps and call added

--- a/src/utils/Languages/ar.json
+++ b/src/utils/Languages/ar.json
@@ -29,6 +29,7 @@
             "version":"إصدار",
             "logoutMessage":"هل أنت متأكد أنك تريد تسجيل الخروج",
             "yes":"نعم",
+            "myProfile":"ملفي",
             "no":"لا"
 
         },
