typescript and login forgotPassword added

--- a/src/utils/Languages/ar.json
+++ b/src/utils/Languages/ar.json
@@ -3,8 +3,8 @@
         "Login":{
             "login":"تسجيل الدخول",
             "username":"اسم المستخدم",
-            "MobileNumber":"رقم الهاتف المحمول",
-            "password":"كلمة المرور",
+            "MobileNumber":"أدخل رقم هاتفك المحمول",
+            "password":"أدخل كلمة المرور",
             "forgotPassword":"هل نسيت كلمة السر ؟",
             "usernameError":"الرجاء إدخال رقم هاتف صالح",
             "passwordError":"يجب أن تحتوي كلمة المرور على 8 أحرف على الأقل"
@@ -15,6 +15,11 @@
             "emailAdress":"عنوان البريد الإلكتروني",
             "error":"الرجاء إدخال اسم مستخدم / بريد إلكتروني صالح",
             "continue":"يكمل"
+        },
+        "ForgotPassword":{
+            "forgotPassword":"هل نسيت كلمة السر",
+            "message":"أدخل رقم هاتفك المحمول ليصلك otp",
+            "send":"يرسل"
         },
         "Dashboard":{
             "dashboard":"لوحة القيادة",
