--- a/src/utils/Languages/ar.json
+++ b/src/utils/Languages/ar.json
@@ -11,10 +11,21 @@
         },
         "ResetPassword":{
             "resetPassword":"إعادة تعيين كلمة المرور",
-            "message":"أدخل عنوان بريدك الإلكتروني وسنساعدك في إعادة تعيين كلمة المرور الخاصة بك",
-            "emailAdress":"عنوان البريد الإلكتروني",
-            "error":"الرجاء إدخال اسم مستخدم / بريد إلكتروني صالح",
-            "continue":"يكمل"
+            "message":"أدخل ما لا يقل عن 6 أحرف بأحرف كبيرة وصغيرة",
+            "enterNewPassword":"أدخل كلمة مرور جديدة",
+            "confirmPassword":"تأكيد كلمة المرور",
+            "error":"الرجاء إدخال كلمة مرور صالحة",
+            "reset":"إعادة ضبط"
+        },
+        "OTPScreen":{
+            "otpVerification":"التحقق من OTP",
+            "didntreceivethecode":"ألم تتلق الرمز؟",
+            "resend":"إعادة إرسال",
+            "verify":"يؤكد",
+            "error": "يجب أن تكون كلمة المرور لمرة واحدة مكونة من 4 أرقام على الأقل",
+            "orderCodeVerification":"طلب رمز التحقق",
+            "alert":"يُحذًِر !",
+            "alertMessage":"بعد 3 محاولات خاطئة ، سيتم حظر حسابك."
         },
         "ForgotPassword":{
             "forgotPassword":"هل نسيت كلمة السر",
@@ -69,8 +80,8 @@
             "totalOrder":"إجمالي الطلبات"
         },
         "DummyData":{
-            "SDG 2330":"2330.12 جنيه سوداني",
-            "SDG 149":"الهدف 149",
+            "EGP 2330":"2330.12 جنيه سوداني",
+            "EGP 149":"الهدف 149",
             "01:00 PM - 03:00 PM":"01:00 م - 03:00 م",
             "Raheeg":"الرهيج",
             "Bhari":"بهاري",
@@ -111,7 +122,7 @@
             "revenue" :"ربح",
            "todaysRevenue":"إيرادات اليوم",
            "totalRevenue":"إجمالي الإيرادات",
-           "sdg":"الهدف",
+           "egp":"جنيه مصري",
            "filter":"منقي"
         }
     }
