Api added for profile dashboard

--- a/src/utils/Languages/ar.json
+++ b/src/utils/Languages/ar.json
@@ -25,7 +25,10 @@
             "error": "يجب أن تكون كلمة المرور لمرة واحدة مكونة من 4 أرقام على الأقل",
             "orderCodeVerification":"طلب رمز التحقق",
             "alert":"يُحذًِر !",
-            "alertMessage":"بعد 3 محاولات خاطئة ، سيتم حظر حسابك."
+            "alertMessage":"بعد 3 محاولات خاطئة ، سيتم حظر حسابك.",
+            "after":"بعد",
+            "wrongAttempts":"3 محاولات خاطئة",
+            "banned":"سيتم حظر حسابك."
         },
         "ForgotPassword":{
             "forgotPassword":"هل نسيت كلمة السر",
